--- a/css/headers.css
+++ b/css/headers.css
@@ -1,3 +1,16 @@
+:root {
+  --swiper-navigation-size: 25px;
+}
+
+#ssh {
+  background-color: #ffffff;
+  z-index: 999;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 .sshContainer {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -292,7 +305,8 @@
 .sshCategory {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  padding: 10px 20px;
+  padding: 0 20px;
+  border-bottom: 1px solid #d6d6d6;
 }
 .sshCpartOne {
   display: flex;
@@ -301,7 +315,23 @@
   justify-content: center;
   grid-column: 1/2;
   margin-right: 15px;
+  position: relative;
 }
+.sshCpartOne:before {
+  content: "";
+  width: 1px;
+  height: 25px;
+  background-color: #b3b3b3;
+  position: absolute;
+  right: -15px;
+}
+.sshCpartOne div {
+  display: flex;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+}
+
 .sshCpartOne div a {
   font-size: 14px;
   font-weight: 500;
@@ -313,23 +343,36 @@
 }
 
 .swiper {
-  width: 100%;
+  width: 98%;
   grid-column: 2/-1;
 }
 .swiper-button-prev,
 .swiper-rtl .swiper-button-next {
   left: var(--swiper-navigation-sides-offset, 0);
   color: #cf90f9;
+  background: #000000;
+  padding: 12px;
+  border-radius: 10px;
 }
 .swiper-button-next,
 .swiper-rtl .swiper-button-prev {
   right: var(--swiper-navigation-sides-offset, 0);
   color: #cf90f9;
+  background: #000000;
+  padding: 12px;
+  border-radius: 10px;
 }
 
 .sshCpartTwo {
   display: flex;
-  gap: 30px;
+  gap: 20px;
+}
+
+.sshCategory .swiper ul li {
+  display: flex;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
 }
 
 .sshCategory ul li {
