--- a/css/headers.css
+++ b/css/headers.css
@@ -235,10 +235,14 @@
   align-items: center;
   margin-bottom: 20px;
 }
+
 .sshMenuBoxLogo strong {
   font-size: 16px;
   font-weight: 600;
   color: #000000;
+}
+.sshMenuBoxLogo img:last-child {
+  display: none;
 }
 
 .sshMenuBoxLinks {
@@ -403,6 +407,7 @@
 /* SSH Category Ends Are Here */
 
 /* Header CSS Responsive Design Starts Are Here*/
+/* responsive design under max widht 599px starts are here  */
 @media only screen and (max-width: 599px) {
   .sshLogo img {
     width: 40px;
@@ -453,10 +458,31 @@
     transform: rotate(315deg);
   }
   .sshMenuBoxLogo {
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
     margin-bottom: 0;
+  }
+  .sshMenuBoxLogo img {
+    width: 18px;
+    height: 18px;
+  }
+  .sshMenuBoxLogo img:last-child {
+    display: block;
+    width: 17px;
+    height: 17px;
+    justify-self: end;
+  }
+  .sshMenuBoxLogo strong {
+    font-size: 13px;
+    font-weight: 500;
+    color: #000000;
   }
   .sshMenuBoxLinks {
     display: none;
+  }
+  .sshMenuBoxLinksActive {
+    margin-top: 15px;
+    display: flex;
   }
   .sshBottomBar {
     grid-template-columns: 1fr;
@@ -473,6 +499,9 @@
   .sshLanguages {
     justify-content: flex-start;
   }
+  .sshLanguages img {
+    width: 18px;
+  }
 
   .sshUserActionsMobile {
     display: flex;
@@ -485,26 +514,26 @@
     justify-content: space-evenly;
   }
   .sshLoginButtonMobile button {
-    font-size: 14px;
-    font-weight: 400px;
+    font-size: 13px;
+    font-weight: 400;
     color: #818181;
     border: 1px solid #818181;
     padding: 5px;
     border-radius: 5px;
-    transition: all 0.5 cubic-bezier(0.95, 0.05, 0.795, 0.035);
+    transition: all 0.5s cubic-bezier(0.95, 0.05, 0.795, 0.035);
   }
   .sshLoginButtonMobile button:hover {
     color: #000000;
     border: 1px solid #000000;
   }
   .sshLoginButtonMobile a {
-    font-size: 14px;
-    font-weight: 400px;
+    font-size: 13px;
+    font-weight: 400;
     color: #818181;
     border: 1px solid #818181;
     padding: 5px;
     border-radius: 5px;
-    transition: all 0.5 cubic-bezier(0.95, 0.05, 0.795, 0.035);
+    transition: all 0.5s cubic-bezier(0.95, 0.05, 0.795, 0.035);
   }
   .sshLoginButtonMobile a:hover {
     color: #000000;
@@ -531,5 +560,596 @@
     color: #000000;
     text-decoration: dashed;
   }
+
+  .sshCpartOne:before {
+    right: -10px;
+  }
+  .sshCpartOne .clickable {
+    font-size: 13px;
+  }
+  .sshCategory ul li {
+    font-size: 13px;
+  }
+
+  :root {
+    --swiper-navigation-size: 18px;
+  }
+  .swiper-button-prev,
+  .swiper-rtl .swiper-button-next {
+    padding: 10px;
+  }
+  .swiper-button-next,
+  .swiper-rtl .swiper-button-prev {
+    padding: 10px;
+  }
 }
+/* responsive design under max widht 599px ends are here  */
+
+/* responsive design between min widht 600px to max width 768px starts are here  */
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+  .sshLogo img {
+    width: 40px;
+    height: 50px;
+  }
+  .sshSearch {
+    grid-column: 2 / 12;
+  }
+  .sshSearch form {
+    width: 99%;
+  }
+  .sshSearch button {
+    padding: 6px 0 6px 6px;
+  }
+  .sshSearch button img {
+    width: 20px;
+    height: 20px;
+  }
+  .sshSearch input[type="search"] {
+    font-size: 13px;
+    padding: 5px 5px 5px 1px;
+  }
+  .sshEaU {
+    display: none;
+  }
+  .sshUserActions {
+    display: none;
+  }
+
+  .sshMenuBar button img {
+    width: 22px;
+    height: 22px;
+  }
+
+  .sshMenu {
+    width: 290px;
+    top: 50px;
+    right: 10px;
+    padding-bottom: 30px;
+  }
+  .sshMenuContainer {
+    grid-template-columns: 1fr;
+    grid-gap: 25px;
+    margin-bottom: 20px;
+  }
+  .sshMenuContainer::before {
+    right: 5px;
+    transform: rotate(315deg);
+  }
+  .sshMenuBoxLogo {
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+    margin-bottom: 0;
+  }
+  .sshMenuBoxLogo img {
+    width: 19px;
+    height: 19px;
+  }
+  .sshMenuBoxLogo img:last-child {
+    display: block;
+    width: 18px;
+    height: 18px;
+    justify-self: end;
+  }
+  .sshMenuBoxLogo strong {
+    font-size: 14px;
+    font-weight: 500;
+    color: #000000;
+  }
+  .sshMenuBoxLinks {
+    display: none;
+  }
+  .sshMenuBoxLinksActive {
+    margin-top: 15px;
+    display: flex;
+  }
+  .sshBottomBar {
+    grid-template-columns: 1fr;
+    grid-gap: 15px;
+    padding: 15px 15px 0 15px;
+    margin-bottom: 20px;
+  }
+  .sshPages ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+  .sshLanguages {
+    justify-content: flex-start;
+  }
+  .sshLanguages img {
+    width: 19px;
+  }
+
+  .sshUserActionsMobile {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
+  .sshLoginButtonMobile {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .sshLoginButtonMobile button {
+    font-size: 13.5px;
+    font-weight: 400;
+    color: #818181;
+    border: 1px solid #818181;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.5s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  }
+  .sshLoginButtonMobile button:hover {
+    color: #000000;
+    border: 1px solid #000000;
+  }
+  .sshLoginButtonMobile a {
+    font-size: 13.5px;
+    font-weight: 400;
+    color: #818181;
+    border: 1px solid #818181;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.5s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  }
+  .sshLoginButtonMobile a:hover {
+    color: #000000;
+    border: 1px solid #000000;
+  }
+
+  .signUpMobileLink {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+  }
+  .signUpMobileLink span {
+    color: #818181;
+  }
+  .signUpMobileLink a {
+    color: #818181;
+    text-decoration: underline;
+    transition: all 0.5s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  }
+  .signUpMobileLink a:hover {
+    color: #000000;
+    text-decoration: dashed;
+  }
+
+  .sshCpartOne:before {
+    right: -10px;
+  }
+  .sshCpartOne .clickable {
+    font-size: 14px;
+  }
+  .sshCategory ul li {
+    font-size: 14px;
+  }
+
+  :root {
+    --swiper-navigation-size: 18px;
+  }
+  .swiper-button-prev,
+  .swiper-rtl .swiper-button-next {
+    padding: 10px;
+  }
+  .swiper-button-next,
+  .swiper-rtl .swiper-button-prev {
+    padding: 10px;
+  }
+}
+/* responsive design between min widht 600px to max width 768px ends are here  */
+
+/* responsive design between min widht 769px to max width 991px starts are here  */
+@media only screen and (min-width: 769px) and (max-width: 991px) {
+  .sshLogo img {
+    width: 40px;
+    height: 50px;
+  }
+  .sshSearch {
+    grid-column: 2 / 9;
+  }
+  .sshSearch form {
+    width: 99%;
+  }
+  .sshSearch button {
+    padding: 6px 0 6px 6px;
+  }
+  .sshSearch button img {
+    width: 20px;
+    height: 20px;
+  }
+  .sshSearch input[type="search"] {
+    font-size: 13px;
+    padding: 5px 5px 5px 1px;
+  }
+  .sshEaU {
+    display: none;
+  }
+  .sshUserActions {
+    display: flex;
+    grid-column: 9 / 12;
+  }
+  .sshUserActions .sshLoginButton a {
+    font-size: 13px;
+  }
+  .sshUserActions button {
+    font-size: 13px;
+  }
+
+  .sshMenuBar button img {
+    width: 22px;
+    height: 22px;
+  }
+
+  .sshMenu {
+    width: 290px;
+    top: 50px;
+    right: 10px;
+    padding-bottom: 30px;
+  }
+  .sshMenuContainer {
+    grid-template-columns: 1fr;
+    grid-gap: 25px;
+    margin-bottom: 20px;
+  }
+  .sshMenuContainer::before {
+    right: 5px;
+    transform: rotate(315deg);
+  }
+  .sshMenuBoxLogo {
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+    margin-bottom: 0;
+  }
+  .sshMenuBoxLogo img {
+    width: 19px;
+    height: 19px;
+  }
+  .sshMenuBoxLogo img:last-child {
+    display: block;
+    width: 18px;
+    height: 18px;
+    justify-self: end;
+  }
+  .sshMenuBoxLogo strong {
+    font-size: 14px;
+    font-weight: 500;
+    color: #000000;
+  }
+  .sshMenuBoxLinks {
+    display: none;
+  }
+  .sshMenuBoxLinksActive {
+    margin-top: 15px;
+    display: flex;
+  }
+  .sshBottomBar {
+    grid-template-columns: 1fr;
+    grid-gap: 15px;
+    padding: 15px 15px 0 15px;
+    margin-bottom: 20px;
+  }
+  .sshPages ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+  .sshLanguages {
+    justify-content: flex-start;
+  }
+  .sshLanguages img {
+    width: 19px;
+  }
+
+  .sshUserActionsMobile {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
+  .sshLoginButtonMobile {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .sshLoginButtonMobile button {
+    font-size: 13.5px;
+    font-weight: 400;
+    color: #818181;
+    border: 1px solid #818181;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.5s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  }
+  .sshLoginButtonMobile button:hover {
+    color: #000000;
+    border: 1px solid #000000;
+  }
+  .sshLoginButtonMobile a {
+    font-size: 13.5px;
+    font-weight: 400;
+    color: #818181;
+    border: 1px solid #818181;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.5s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  }
+  .sshLoginButtonMobile a:hover {
+    color: #000000;
+    border: 1px solid #000000;
+  }
+
+  .signUpMobileLink {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+  }
+  .signUpMobileLink span {
+    color: #818181;
+  }
+  .signUpMobileLink a {
+    color: #818181;
+    text-decoration: underline;
+    transition: all 0.5s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  }
+  .signUpMobileLink a:hover {
+    color: #000000;
+    text-decoration: dashed;
+  }
+
+  .sshCpartOne:before {
+    right: -10px;
+  }
+  .sshCpartOne .clickable {
+    font-size: 14px;
+  }
+  .sshCategory ul li {
+    font-size: 14px;
+  }
+
+  :root {
+    --swiper-navigation-size: 18px;
+  }
+  .swiper-button-prev,
+  .swiper-rtl .swiper-button-next {
+    padding: 10px;
+  }
+  .swiper-button-next,
+  .swiper-rtl .swiper-button-prev {
+    padding: 10px;
+  }
+}
+/* responsive design between min widht 769px to max width 991px ends are here  */
+
+/* responsive design between min widht 992px to max width 1250px starts are here  */
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .sshLogo img {
+    width: 40px;
+    height: 50px;
+  }
+  .sshSearch {
+    grid-column: 2 / 6;
+  }
+  .sshSearch form {
+    width: 99%;
+  }
+  .sshSearch button {
+    padding: 6px 0 6px 6px;
+  }
+  .sshSearch button img {
+    width: 20px;
+    height: 20px;
+  }
+  .sshSearch input[type="search"] {
+    font-size: 13px;
+    padding: 5px 5px 5px 1px;
+  }
+  .sshEaU {
+    display: flex;
+    justify-content: flex-end;
+    grid-column: 6 / 9;
+  }
+  .sshEaU:after {
+    right: -25px;
+  }
+  .sshUserActions {
+    display: flex;
+    justify-content: center;
+    grid-column: 9 / 12;
+  }
+
+  .sshUserActions .sshLoginButton a {
+    font-size: 13px;
+  }
+  .sshUserActions button {
+    font-size: 13px;
+  }
+
+  .sshMenuBar button img {
+    width: 22px;
+    height: 22px;
+  }
+
+  .sshMenu {
+    width: 290px;
+    top: 50px;
+    right: 10px;
+    padding-bottom: 30px;
+  }
+  .sshMenuContainer {
+    grid-template-columns: 1fr;
+    grid-gap: 25px;
+    margin-bottom: 20px;
+  }
+  .sshMenuContainer::before {
+    right: 5px;
+    transform: rotate(315deg);
+  }
+  .sshMenuBoxLogo {
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+    margin-bottom: 0;
+  }
+  .sshMenuBoxLogo img {
+    width: 19px;
+    height: 19px;
+  }
+  .sshMenuBoxLogo img:last-child {
+    display: block;
+    width: 18px;
+    height: 18px;
+    justify-self: end;
+  }
+  .sshMenuBoxLogo strong {
+    font-size: 14px;
+    font-weight: 500;
+    color: #000000;
+  }
+  .sshMenuBoxLinks {
+    display: none;
+  }
+  .sshMenuBoxLinksActive {
+    margin-top: 15px;
+    display: flex;
+  }
+  .sshBottomBar {
+    grid-template-columns: 1fr;
+    grid-gap: 15px;
+    padding: 15px 15px 0 15px;
+    margin-bottom: 20px;
+  }
+  .sshPages ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+  .sshLanguages {
+    justify-content: flex-start;
+  }
+  .sshLanguages img {
+    width: 19px;
+  }
+
+  .sshUserActionsMobile {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
+  .sshLoginButtonMobile {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .sshLoginButtonMobile button {
+    font-size: 13.5px;
+    font-weight: 400;
+    color: #818181;
+    border: 1px solid #818181;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.5s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  }
+  .sshLoginButtonMobile button:hover {
+    color: #000000;
+    border: 1px solid #000000;
+  }
+  .sshLoginButtonMobile a {
+    font-size: 13.5px;
+    font-weight: 400;
+    color: #818181;
+    border: 1px solid #818181;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.5s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  }
+  .sshLoginButtonMobile a:hover {
+    color: #000000;
+    border: 1px solid #000000;
+  }
+
+  .signUpMobileLink {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+  }
+  .signUpMobileLink span {
+    color: #818181;
+  }
+  .signUpMobileLink a {
+    color: #818181;
+    text-decoration: underline;
+    transition: all 0.5s cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  }
+  .signUpMobileLink a:hover {
+    color: #000000;
+    text-decoration: dashed;
+  }
+
+  .sshCpartOne:before {
+    right: -10px;
+  }
+  .sshCpartOne .clickable {
+    font-size: 14px;
+  }
+  .sshCategory ul li {
+    font-size: 14px;
+  }
+
+  :root {
+    --swiper-navigation-size: 18px;
+  }
+  .swiper-button-prev,
+  .swiper-rtl .swiper-button-next {
+    padding: 10px;
+  }
+  .swiper-button-next,
+  .swiper-rtl .swiper-button-prev {
+    padding: 10px;
+  }
+}
+/* responsive design between min widht 992px to max width 1250px ends are here  */
+
+@media only screen and (min-width: 1201px) and (max-width: 1350px) {
+  .sshSearch {
+    grid-column: 2 / 6;
+  }
+  .sshEaU {
+    grid-column: 6 / 9;
+  }
+  .sshUserActions {
+    grid-column: 9 / 12;
+  }
+}
+
 /* Header CSS Responsive Design Ens Are Here*/
