--- a/css/footer.css
+++ b/css/footer.css
@@ -5,11 +5,11 @@ footer {
   align-items: center;
 }
 .footerContainer {
-  margin-top: 50px;
+  margin-top: 100px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-gap: 100px;
-  justify-content: center;
+  grid-gap: 50px;
+  justify-content: space-between;
   align-items: start;
   margin-bottom: 50px;
 }
@@ -82,3 +82,32 @@ footer {
 .footerBar .social ul li:hover img {
   transform: scale(1.2);
 }
+
+/* Responsive CSS starts are here */
+/* max-width 599px Starts are here  */
+@media only screen and (max-width: 599px) {
+  .footerContainer {
+    grid-template-columns: 1fr;
+  }
+  .footerBox {
+    grid-column: 1 / -1;
+  }
+  .footerBar {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 25px;
+  }
+}
+/* max-width 599px ends are here*/
+
+/* min-width 600px to max-width 991px Starts are here  */
+@media only screen and (min-width: 600px) and (max-width: 991px) {
+  .footerContainer {
+    grid-template-columns: repeat(12, 1fr);
+  }
+  .footerBox {
+    grid-column: span 6;
+  }
+}
+/* min-width 600px to max-width 991px ends are here*/
+/* Responsive CSS ends are here */
