--- a/css/forgotPassword.css
+++ b/css/forgotPassword.css
@@ -7,7 +7,7 @@ main {
 }
 .container {
   display: grid;
-  grid-template-columns: 40%;
+  grid-template-columns: 500px;
   grid-gap: 40px;
   justify-content: center;
   align-items: center;
@@ -108,3 +108,21 @@ main {
   box-shadow: 0 0 10px -5px #000000;
   color: #ffffff;
 }
+
+/* Responsive CSS Ends Are Here */
+/* max-width 599px Starts Are Here */
+@media only screen and (max-width: 599px) {
+  .container {
+    grid-template-columns: 90%;
+    justify-content: center;
+    align-items: center;
+  }
+  .container article h1 {
+    font-size: 24px;
+  }
+  .container article p {
+    font-weight: 400;
+  }
+}
+/* max-width 599px Starts Are Here */
+/* Responsive CSS Ends Are Here */
